# ArmorDetector

./: ArmorDetector.cpp  README .md  README.md  out
install/: local_setup.sh  setup.sh
install/video_publisher/lib/video_publisher/: talker
install/video_publisher/share/video_publisher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/video_subscriber/lib/video_subscriber/: listener
install/video_subscriber/share/video_subscriber/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/video_subscriber/share/video_subscriber/launch/: launch.py
log/: latest_build
src/video_publisher/: CMakeLists.txt
src/video_publisher/src/: publisher_video.cpp
src/video_subscriber/: CMakeLists.txt
src/video_subscriber/src/: subscriber_video.cpp
