<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>video_publisher</name>
  <version>0.0.0</version>
  <description>publish vedio</description>
  <maintainer email="2260982371@qq.com">cw</maintainer>
  <license>Apache License 2.0</license>

  <depend>opencv</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
